# src/Interfaces/http/api/lansia/index.js
@@ -1,8 +1,11 @@
-import makeLansiaHandler from './handler.js';
+// import makeLansiaHandler from './handler.js';
 import createLansiaRouter from './routes.js';
+import { makeLansiaHandler, makeLansiaExcelHandler } from './handler.js';
+
 
 // Sekarang menerima parameter kedua: authMiddleware
 export default (container, authMiddleware) => {
   const lansiaHandler = makeLansiaHandler(container);
-  return createLansiaRouter(lansiaHandler, authMiddleware);
+  const excelHandler = makeLansiaExcelHandler(container);
+  return createLansiaRouter(lansiaHandler, excelHandler, authMiddleware);
 };
